--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
+  <div id="container" *ngIf="loaded">
     <label for="num1">Numero 1</label>
     <input name="num1" type="number" [(ngModel)]="num1">
     <label for="num2">Numero 2</label>
